# VSc-3D-Renderer

./: CMakeLists.txt  README.md
python_scripts/: drone_telemetry.py
src/: main.cpp  pythonManager.cpp  pythonManager.h  render_engine.cpp  render_engine.h  sdl_engine.cpp  sdl_engine.h
